--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "@components/*": [
         "src/app/components/*"
       ],
+      "@services/*": [
+        "src/app/core/services/*"
+      ],
       "@models/*": [
         "src/app/core/models/*"
       ],
