chore(package): add script to run client and json-server concurrently

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npx concurrently \"npm run start-server\" \"npm run start-client\"",
+    "start-server": "json-server --watch server/data/db.json",
+    "start-client": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
